ClinicTemplate.yaml
Resources:
  ClinicServerLaunchTemplate:
    Type: AWS::EC2::LaunchTemplate
    Properties:
        ImageId: ami-0453ce6279422709a
        InstanceType: t3.medium
        KeyName: Vlad1
        SecurityGroupIds:
          - !GetAtt ClinicSecurityGroup.GroupId
        UserData: !Base64 |
          #!/bin/bash
          yum update -y
          amazon-linux-extras install docker -y
          systemctl start docker
          systemctl enable docker
          curl -L "https://github.com/docker/compose/releases/download/$(curl -s https://api.github.com/repos/docker/compose/releases/latest | grep 'tag_name' | cut -d\" -f4)/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
          chmod +x /usr/local/bin/docker-compose
          usermod -aG docker ec2-user
          newgrp docker
          amazon-linux-extras install java-openjdk17 -y
          cd /home/ec2-user
          yum install git -y
          cd spring-petclinic-microservices
          git clone https://github.com/spring-petclinic/spring-petclinic-microservices.git
          docker-compose up -d

  ClinicSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: My security group for EC2 instances
      VpcId: vpc-0513fb4df1965f567
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '8761'
          ToPort: '8761'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '8888'
          ToPort: '8888'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '443'
          ToPort: '443'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '8080'
          ToPort: '8080'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '9090'
          ToPort: '9090'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '3000'
          ToPort: '3000'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '9091'
          ToPort: '9091'
          CidrIp: 0.0.0.0/0

      SecurityGroupEgress:
        - IpProtocol: '-1'
          CidrIp: 0.0.0.0/0
